resolve link to images

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 				<div class="icon-container">
 					<img
 						class="icon"
-						src="../images/icon-star.svg"
+						src="./images/icon-star.svg"
 						alt="icon-star image"
 					/>
 				</div>
@@ -116,7 +116,7 @@
 			<div class="icon-rating-container">
 				<img
 					id="icon"
-					src="../images/illustration-thank-you.svg"
+					src="./images/illustration-thank-you.svg"
 					alt="icon-star image"
 				/>
 			</div>
