--- a/index.html
+++ b/index.html
@@ -38,100 +38,102 @@
 		</style>
 	</head>
 	<body>
-		<!-- Rating state start -->
-		<section id="rating-sect" class="sect">
-			<form action="" id="rating-form">
-				<div class="icon-container">
+		<main>
+			<!-- Rating state start -->
+			<section id="rating-sect" class="sect">
+				<form action="" id="rating-form">
+					<div class="icon-container">
+						<img
+							class="icon"
+							src="/images/icon-star.svg"
+							alt="icon-star image"
+						/>
+					</div>
+					<h1 class="title">How did we do?</h1>
+					<p class="question">
+						Please let us know how we did with your support request. All
+						feedback is appreciated to help us improve our offering!
+					</p>
+					<div
+						class="rating-container"
+						role="group"
+						aria-labelledby="rating-label"
+					>
+						<button
+							type="button"
+							class="rating circle"
+							data-value="1"
+							aria-pressed="false"
+							value="1"
+						>
+							1
+						</button>
+						<button
+							type="button"
+							class="rating circle"
+							data-value="2"
+							aria-pressed="false"
+							value="2"
+						>
+							2
+						</button>
+						<button
+							type="button"
+							class="rating circle"
+							data-value="3"
+							aria-pressed="false"
+							value="3"
+						>
+							3
+						</button>
+						<button
+							type="button"
+							class="rating circle"
+							data-value="4"
+							aria-pressed="false"
+							value="4"
+						>
+							4
+						</button>
+						<button
+							type="button"
+							class="rating circle"
+							data-value="5"
+							aria-pressed="false"
+							value="5"
+						>
+							5
+						</button>
+					</div>
+					<button type="button" id="submit-btn">Submit</button>
+				</form>
+			</section>
+
+			<!-- Rating state end -->
+
+			<!-- Thank you state start -->
+
+			<section id="thank-sect" class="sect hidden">
+				<div class="icon-rating-container">
 					<img
-						class="icon"
-						src="/images/icon-star.svg"
+						id="icon"
+						src="/images/illustration-thank-you.svg"
 						alt="icon-star image"
 					/>
 				</div>
-				<h1 class="title">How did we do?</h1>
-				<p class="question">
-					Please let us know how we did with your support request. All
-					feedback is appreciated to help us improve our offering!
-				</p>
-				<div
-					class="rating-container"
-					role="group"
-					aria-labelledby="rating-label"
+				<span class="rated"
+					>You selected <span class="value"></span> out of 5</span
 				>
-					<button
-						type="button"
-						class="rating circle"
-						data-value="1"
-						aria-pressed="false"
-						value="1"
-					>
-						1
-					</button>
-					<button
-						type="button"
-						class="rating circle"
-						data-value="2"
-						aria-pressed="false"
-						value="2"
-					>
-						2
-					</button>
-					<button
-						type="button"
-						class="rating circle"
-						data-value="3"
-						aria-pressed="false"
-						value="3"
-					>
-						3
-					</button>
-					<button
-						type="button"
-						class="rating circle"
-						data-value="4"
-						aria-pressed="false"
-						value="4"
-					>
-						4
-					</button>
-					<button
-						type="button"
-						class="rating circle"
-						data-value="5"
-						aria-pressed="false"
-						value="5"
-					>
-						5
-					</button>
-				</div>
-				<button type="button" id="submit-btn">Submit</button>
-			</form>
-		</section>
+				<h2 class="thank-title">Thank you!</h2>
 
-		<!-- Rating state end -->
+				<p class="agreements">
+					We appreciate you taking the time to give a rating. If you ever
+					need more support, don’t hesitate to get in touch!
+				</p>
+			</section>
 
-		<!-- Thank you state start -->
-
-		<section id="thank-sect" class="sect hidden">
-			<div class="icon-rating-container">
-				<img
-					id="icon"
-					src="/images/illustration-thank-you.svg"
-					alt="icon-star image"
-				/>
-			</div>
-			<span class="rated"
-				>You selected <span class="value"></span> out of 5</span
-			>
-			<h2 class="thank-title">Thank you!</h2>
-
-			<p class="agreements">
-				We appreciate you taking the time to give a rating. If you ever need
-				more support, don’t hesitate to get in touch!
-			</p>
-		</section>
-
-		<!-- Thank you state end -->
+			<!-- Thank you state end -->
+		</main>
 
 		<footer class="attribution">
 			<div id="challenge">
