--- a/index.html
+++ b/index.html
@@ -49,7 +49,9 @@
 							alt="icon-star image"
 						/>
 					</div>
-					<h1 class="title">How did we do?</h1>
+					<header>
+						<h1 class="title">How did we do?</h1>
+					</header>
 					<p class="question">
 						Please let us know how we did with your support request. All
 						feedback is appreciated to help us improve our offering!
